--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- DY Script -->
+    <link rel="preconnect" href="//cdn.dynamicyield.com">
+    <link rel="preconnect" href="//st.dynamicyield.com">
+    <link rel="preconnect" href="//rcom.dynamicyield.com">
+    <link rel="dns-prefetch" href="//cdn.dynamicyield.com">
+    <link rel="dns-prefetch" href="//st.dynamicyield.com">
+    <link rel="dns-prefetch" href="//rcom.dynamicyield.com">
+    <script type="text/javascript" src="//cdn.dynamicyield.com/api/8786923/api_dynamic.js"></script>
+    <script type="text/javascript" src="//cdn.dynamicyield.com/api/8786923/api_static.js"></script>
 </head>
 
 <body>
